# TetrisFriends

./: .gitignore  Block.py  Board.py  Button.py  CONSTANTS.py  GameOverMenu.py  HighScoreMenu.py  LICENSE  MainMenu.py  Player.py  README.md  SideBoard.py  SinglePlayerTetris.py  Tetromino.py  Text.py  hello.py  highscores.pkl  main.py  pyproject.toml
src/tetris/: __init__.py  board.py  button.py  game_over_menu.py  high_score_menu.py  main_menu.py  player.py  side_board.py  single_player_tetris.py  tetronimo.py
