[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tetris"
version = "1.0.0"
authors = [
  { name="Jasper Dekoninck", email="dekoninck.jasper@protonmail.com" },
]
description = "Simple Tetris implementation in Pygame"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache 2.0 License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pygame >= 2.5.2",
    "numpy >= 1.24.3",
]
